--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html>
 <head>
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=dinary://jar.details?jarId=5">
+    <script>
+        // Function to extract query parameters from the URL
+        function getParameterByName(name, url) {
+            if (!url) url = window.location.href;
+            name = name.replace(/[\[\]]/g, "\\$&");
+            var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+                results = regex.exec(url);
+            if (!results) return null;
+            if (!results[2]) return '';
+            return decodeURIComponent(results[2].replace(/\+/g, " "));
+        }
+
+        // Get the jarId parameter from the URL
+        var jarId = getParameterByName('jarId');
+
+        // Redirect to the deeplink with the extracted jarId parameter
+        var redirectURL = "dinary://jar.details?jarId=" + jarId;
+        window.location.href = redirectURL;
+    </script>
 </head>
-<body>
-    <p>If you are not redirected, <a href="dinary://jar.details?jarId=5">click here</a>.</p>
-</body>
 </html>
