--- a/index.html
+++ b/index.html
@@ -22,4 +22,13 @@
         window.location.href = redirectURL;
     </script>
 </head>
+    <body>
+        <!-- This is where you can put your content -->
+        <!-- For example, you can display the jarId value here -->
+        <p>Jar ID: <span id="jarIdDisplay"></span></p>
+        <!-- You can use JavaScript to populate the span with the jarId value -->
+        <script>
+            document.getElementById("jarIdDisplay").innerText = jarId;
+        </script>
+    </body>
 </html>
