--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=https://dinary://jar.details?jarId=5">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Display jarId Query Parameter</title>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            // Function to get the value of a query parameter from the URL
+            function getQueryParam(param) {
+                const queryString = window.location.search;
+                const urlParams = new URLSearchParams(queryString);
+                return urlParams.get(param);
+            }
+
+            // Get the value of the jarId parameter
+            const jarId = getQueryParam('jarId');
+
+            // Display the value in the body of the HTML document
+            document.getElementById('jarIdDisplay').innerText = jarId;
+        });
+    </script>
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://dinary://jar.details?jarId=5">click here</a>.</p>
+    <h1>Displaying jarId Query Parameter</h1>
+    <p>jarId: <span id="jarIdDisplay"></span></p>
 </body>
 </html>
