--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Display jarId Query Parameter</title>
+    <title>Dinary jar</title>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-            // Function to get the value of a query parameter from the URL
             function getQueryParam(param) {
                 const queryString = window.location.search;
                 const urlParams = new URLSearchParams(queryString);
