--- a/index.html
+++ b/index.html
@@ -1,23 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dinary jar</title>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            function getQueryParam(param) {
-                const queryString = window.location.search;
-                const urlParams = new URLSearchParams(queryString);
-                return urlParams.get(param);
-            }
+    <title>Privacy Policy</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+        line-height: 1.6;
+      }
 
-            // Get the value of the jarId parameter
-            const jarId = getQueryParam('jarId');
-             var redirectURL = "dinary://jar.details?jarId=" + jarId;
-                window.location.href = redirectURL;
-        });
-    </script>
-</head>
+      h1 {
+        text-align: center;
+        text-decoration: underline;
+      }
 
-</html>
+      h3 {
+        margin-top: 20px;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Privacy Policy</h1>
+    <hr>
+    <h3>Introduction</h3>
+    <p>Our privacy policy will help you understand what information we collect at <em>Dinary</em>, how <em>Dinary</em> uses it, and what choices you have. <em>Dinary</em> built the <em>Dinary</em> app as a free app. This SERVICE is provided by <em>Dinary</em> at no cost and is intended for use as is. If you choose to use our Service, then you agree to the collection and use of information in relation with this policy. The Personal Information that we collect are used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy. The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible in our website, unless otherwise defined in this Privacy Policy. </p>
+    <h3>Information Collection and Use</h3>
+    <p>For a better experience while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to users name, email address, gender, location, pictures. The information that we request will be retained by us and used as described in this privacy policy. The app does use third party services that may collect information used to identify you.</p>
+    <h3>Location Information</h3>
+    <p>Some of the services may use location information transmitted from users' mobile phones. We only use this information within the scope necessary for the designated service.</p>
+    <h3>Device Information</h3>
+    <p>We collect information from your device in some cases. The information will be utilized for the provision of better service and to prevent fraudulent acts. Additionally, such information will not include that which will identify the individual user.</p>
+    <h3>Service Providers</h3>
+    <p>We may employ third-party companies and individuals due to the following reasons:</p>
+    <ul>
+      <li>To facilitate our Service;</li>
+      <li>To provide the Service on our behalf;</li>
+      <li>To perform Service-related services; or</li>
+      <li>To assist us in analyzing how our Service is used.</li>
+    </ul>
+    <p>We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</p>
+    <h3>Security</h3>
+    <p>We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</p>
+    <h3>Children’s Privacy</h3>
+    <p>This Service does not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we can take the necessary actions.</p>
+    <h3>Changes to This Privacy Policy</h3>
+    <p>We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</p>
+    <h3>Contact Us</h3>
+    <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us.</p>
+    <p>Contact Information:</p>
+    <p>Email: <a href="mailto:contact@dinary.tn">contact@dinary.tn</a>
+    </p>
